io-hotmoka-examples/src/main/java/io/hotmoka/tests/errors/illegalaccesstononwhitelistedfield1/C.java
package io.hotmoka.tests.errors.illegalaccesstononwhitelistedfield1;

public class C {

	public Object foo() {
		return System.out;
	}
}